# usv-playpen

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  REVIEW_analyses.md  REVIEW_modeling.md  REVIEW_neuropixels.md  REVIEW_processing.md  REVIEW_recording.md  REVIEW_root.md  REVIEW_visualizations.md  anipose_operations.py  behavioral_experiments.py  file_writer.py  gui_style_sheet.css  noxfile.py  prepare_cluster_job.py  preprocess_data.py  preprocessing_plot.py  pyproject.toml  setup.py  vgg_style_sheet.css  vocal_gym.py
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml  python-publish.yml  tests.yml
_tests/: processing_tests.py  recording_tests.py
docs/: Analyze.rst  CLI.rst  Histology.rst  Modeling.rst  Neuropixels.rst  Notebooks.rst  Prerequisites.rst  Process.rst  README.md  README.rst  Record.rst  Requirements.rst  Visualize.rst  channel_indexing.rst  conf.py  index.rst  modeling_analyses.ipynb  neuronal_coactivity_vocal_categories_analyses.ipynb  npx_histology_unit_quality_processing.ipynb  requirements.txt  usv_spectrogram_analyses.ipynb
src/: analyze_data.py  anipose_operations.py  assign_vocalizations.py  behavioral_experiments.py  das_inference.py  extract_phidget_data.py  file_loader.py  file_manipulation.py  file_writer.py  gui_style_sheet.css  load_audio_files.py  modify_files.py  os_utils.py  prepare_cluster_job.py  preprocess_data.py  preprocessing_plot.py  project.mplstyle  random_pulses.py  send_email.py  sync_regression.py  synchronize_files.py  usv_inference.py  usv_playpen_gui.py  visualize_data.py
src/_config/: avisoft_config.ini  behavioral_experiments_settings.toml  calibrated_sample_rates_imec.ini  coolterm_config.stc  cup_config.ini  email_config.ini  motif_config.ini  playpen_skeleton.json
src/_parameter_settings/: analyses_settings.json  processing_settings.json  visualizations_settings.json
src/_tests/: processing_tests.py  recording_tests.py  test_processing.py  test_recording.py
src/analyses/: compute_behavioral_features.py  compute_behavioral_tuning_curves.py  decode_experiment_label.py  generate_audio_files.py
src/usv_playpen/: __init__.py  _version.py  analyze_data.py  anipose_operations.py  assign_vocalizations.py  assign_vocalizations_utils.py  behavioral_experiments.py  cli_utils.py  das_inference.py  extract_phidget_data.py  load_audio_files.py  modify_files.py  os_utils.py  plot_style.py  prepare_cluster_job.py  preprocess_data.py  preprocessing_plot.py  send_email.py  synchronize_files.py  time_utils.py  usv_playpen_gui.py  visualize_data.py  yaml_utils.py
src/visualizations/: auxiliary_plot_functions.py  make_behavioral_tuning_figures.py  make_behavioral_videos.py
tests/: conftest.py  test_analyze.py  test_anipose.py  test_audio_gen.py  test_cli.py  test_cluster_geometry.py  test_detect_interesting_tuning_neurons.py  test_docs_notebooks.py  test_extract_phidget_data.py  test_figure_io.py  test_gui.py  test_inference.py  test_iui_calculator.py  test_make_neuronal_tuning_figures.py  test_model_selection_filter_shapes.py  test_notebooks_static.py  test_npx_histology_ibl_alignment_export.py  test_npx_monopolar_triangulation.py  test_npx_spike_quality_metrics.py  test_npx_spikeinterface_helpers.py  test_os_utils.py  test_package.py  test_process.py  test_processing.py  test_record.py  test_recording.py  test_settings_contracts.py  test_src_integrity.py  test_synchronize.py  test_unit_triage_aggregator.py  test_visualize.py  test_visualize_helpers.py  test_visualize_stats.py  test_yaml_utils.py
tests/analyses/: test_analyze.py  test_audio_gen.py  test_build_naturalistic_usv_repository.py  test_compute_behavioral_features.py  test_iui_calculator.py  test_mixture_model_utils.py  test_neuronal_coactivity_engine.py  test_qlvm_latents.py  test_qlvm_model.py  test_unit_triage_aggregator.py
tests/foundation/: test_cli.py  test_cli_utils.py  test_os_utils.py  test_send_email.py  test_time_utils.py  test_yaml_utils.py
tests/modeling/: _synth.py  test_acoustic_manifold_geometry.py  test_consolidation.py  test_dispatchers.py  test_jax_bivariate_regression.py  test_jax_multinomial_logistic_regression.py  test_jax_neural_network_cnn.py  test_load_input_files.py  test_manifold_metric.py  test_manifold_torus_regression.py  test_model_selection_filter_shapes.py  test_model_selection_fit_failure.py  test_model_selection_session_gate.py  test_model_selection_tail.py  test_modeling_bases_functions.py  test_modeling_collinearity_audit.py  test_modeling_cross_session_normalization.py  test_modeling_metadata.py  test_modeling_utils.py  test_pipeline_bout_params.py  test_pipeline_category_binomial.py  test_pipeline_cnn.py  test_pipeline_manifold.py  test_pipeline_multinomial.py  test_pipeline_onsets_extra.py  test_pipeline_smoke.py
tests/neuropixels/: test_npx_anatomy_converter.py  test_npx_histology_ibl_alignment_export.py  test_npx_histology_stack_lightsheet_volume.py  test_npx_histology_stitch_smartspim_tiles.py  test_npx_monopolar_triangulation.py  test_npx_patch_unit_catalog_peak_channel.py  test_npx_sglx_meta_to_coords.py  test_npx_spike_quality_metrics.py  test_npx_spikeinterface_helpers.py
tests/processing/: test_anipose.py  test_build_qlvm_training_set.py  test_cc_box_detector.py  test_compute_usv_acoustic_features.py  test_export_yolo_dataset.py  test_extract_phidget_data.py  test_generate_masks.py  test_generate_spectrograms.py  test_inference.py  test_modify_files.py  test_preprocessing_plot.py  test_process.py  test_qlvm_latents.py  test_qlvm_model.py  test_qlvm_pipeline_clis.py  test_sam_utils.py  test_synchronize.py  test_train_masks.py  test_train_qlvm.py
tests/recording/: test_gui.py  test_record.py
tests/visualizations/: test_auxiliary_plot_functions.py  test_behavioral_video_plots.py  test_figure_io.py  test_make_anatomy_figures.py  test_make_coactivity_figures.py  test_make_neuronal_tuning_figures.py  test_make_usv_spectrograms.py  test_modeling_plots.py  test_qlvm_torus_traversal_video.py  test_visualize.py  test_visualize_helpers.py  test_visualize_stats.py
(+230 files in other folders)
