[build-system]
requires = ["hatchling>=1.26", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "usv-playpen"
authors = [
    { name = "@bartulem", email = "mimica.bartul@gmail.com" }
]
description = "GUI/CLI to conduct, process and analyze experiments w/ multichannel e-phys, audio and video acquisition"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11,<3.14"
keywords = ["neuroscience", "mouse", "usv", "behavior", "social", "courtship"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
]
dynamic = ["version"]
dependencies = [
    "astropy",
    "click",
    "cmasher",
    "h5py",
    "imgstore",
    "jax",
    "joblib",
    "librosa",
    "matplotlib",
    "noisereduce",
    "numpy",
    "numba",
    "opencv-contrib-python",
    "optax",
    "pandas",
    "platformdirs",
    "polars",
    "pyarrow",
    "pygam",
    "PyQt6",
    "requests",
    "scipy",
    "seaborn",
    "sleap-anipose",
    "soundfile",
    "scikit-learn",
    "statsmodels",
    "tifffile",
    "toml",
    "tqdm",
    "motifapi",
    "ffmpeg-binaries>=1.0.1",
    "static-sox>=1.0.2",
    "paramiko>=4.0.0",
    "pillow>=12.2.0",
    "spikeinterface==0.104.3",
    "torch",
    "ultralytics",
    "hydra-core",
    "omegaconf",
    "sam-2"
]

[project.optional-dependencies]
gpu = ["jax[cuda12]"]

[project.urls]
Homepage = "https://github.com/bartulem/usv_playpen"
"Bug Tracker" = "https://github.com/bartulem/usv_playpen/issues"
Discussions = "https://github.com/bartulem/usv_playpen/discussions"
Changelog = "https://github.com/bartulem/usv_playpen/releases"

[dependency-groups]
test = [
  "pytest >=9.0.3",
  "pytest-cov >=3",
  "pytest-mock",
  "pytest-qt",
  "iblatlas",
]
dev = [
  { include-group = "test" },
  "jupyterlab>=4.5.7",
  "ipykernel",
  "ipywidgets",
  "marimo",
  "altair",
  "pre-commit>=4.5.1",
]
docs = [
  "sphinx>=7.0",
  "myst_parser>=0.13",
  "sphinx_rtd_theme",
  "sphinx-rtd-dark-mode",
  "sphinx_copybutton",
  "sphinx_autodoc_typehints",
  "furo>=2023.08.17",
  "nbsphinx",
]

[project.scripts]
usv-playpen = "usv_playpen.usv_playpen_gui:main"
conduct-calibration = "usv_playpen.recording.behavioral_experiments:conduct_calibration_cli"
conduct-recording = "usv_playpen.recording.behavioral_experiments:conduct_recording_cli"
concatenate-video-files = "usv_playpen.processing.preprocess_data:concatenate_video_files_cli"
rectify-video-fps = "usv_playpen.processing.preprocess_data:rectify_video_fps_cli"
multichannel-to-single-ch = "usv_playpen.processing.preprocess_data:multichannel_to_channel_audio_cli"
crop-wav-files = "usv_playpen.processing.preprocess_data:crop_wav_files_to_video_cli"
av-sync-check = "usv_playpen.processing.preprocess_data:av_sync_check_cli"
ev-sync-check = "usv_playpen.processing.preprocess_data:ev_sync_check_cli"
hpss-audio = "usv_playpen.processing.preprocess_data:hpss_audio_cli"
bp-filter-audio = "usv_playpen.processing.preprocess_data:bp_filter_audio_files_cli"
concatenate-audio-files = "usv_playpen.processing.preprocess_data:concatenate_audio_files_cli"
sleap-to-h5 = "usv_playpen.processing.preprocess_data:sleap_file_conversion_cli"
anipose-calibrate = "usv_playpen.processing.preprocess_data:conduct_anipose_calibration_cli"
anipose-triangulate = "usv_playpen.processing.preprocess_data:conduct_anipose_triangulation_cli"
anipose-trm = "usv_playpen.processing.preprocess_data:translate_rotate_metric_cli"
das-infer = "usv_playpen.processing.preprocess_data:das_command_line_inference_cli"
das-summarize = "usv_playpen.processing.preprocess_data:summarize_das_findings_cli"
prepare-vcl-assign = "usv_playpen.processing.preprocess_data:prepare_vcl_assign_cli"
vcl-assign = "usv_playpen.processing.preprocess_data:vcl_assign_cli"
concatenate-ephys-files = "usv_playpen.processing.preprocess_data:concatenate_binary_files_cli"
split-clusters = "usv_playpen.processing.preprocess_data:split_clusters_to_sessions_cli"
generate-beh-features = "usv_playpen.analyses.analyze_data:generate_beh_features_cli"
generate-usv-playback = "usv_playpen.analyses.analyze_data:generate_usv_playback_cli"
generate-naturalistic-usv-playback = "usv_playpen.analyses.analyze_data:generate_naturalistic_usv_playback_cli"
generate-rm = "usv_playpen.analyses.analyze_data:generate_rm_files_cli"
generate-usv-interval-distributions = "usv_playpen.analyses.analyze_data:generate_usv_interval_distributions_cli"
generate-rm-figs = "usv_playpen.visualizations.visualize_data:generate_rm_figures_cli"
generate-viz = "usv_playpen.visualizations.visualize_data:visualize_3D_data_cli"
npx-meta-to-coords = "usv_playpen.neuropixels.sglx_meta_to_coords:main"


[tool.hatch]
version.source = "vcs"
version.raw-options = { local_scheme = "no-local-version", version_scheme = "no-guess-dev" }
build.hooks.vcs.version-file = "src/usv_playpen/_version.py"

[tool.hatch.envs.default]
# duplicate for now since hatch doesn't support groups yet
dependencies = []
scripts.test = "pytest {args}"


[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = [
    "error",
]
log_cli_level = "INFO"
testpaths = [
  "tests",
]


[tool.coverage]
run.source = ["usv_playpen"]
report.exclude_also = [
  '\.\.\.',
  'if typing.TYPE_CHECKING:',
]

[tool.mypy]
files = ["src", "tests"]
python_version = "3.11"
warn_unused_configs = true
strict = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = "usv_playpen.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true


[tool.ruff]

[tool.ruff.lint]
extend-select = [
  "ARG",      # flake8-unused-arguments
  "B",        # flake8-bugbear
  "C4",       # flake8-comprehensions
  "EM",       # flake8-errmsg
  "EXE",      # flake8-executable
  "G",        # flake8-logging-format
  "I",        # isort
  "ICN",      # flake8-import-conventions
  "NPY",      # NumPy specific rules
  "PD",       # pandas-vet
  "PGH",      # pygrep-hooks
  "PIE",      # flake8-pie
  "PL",       # pylint
  "PT",       # flake8-pytest-style
  "PTH",      # flake8-use-pathlib
  "RET",      # flake8-return
  "RUF",      # Ruff-specific
  "SIM",      # flake8-simplify
  "T20",      # flake8-print
  "UP",       # pyupgrade
  "YTT",      # flake8-2020
]
ignore = [
  "PLR09",    # Too many <...>
  "PLR2004",  # Magic value used in comparison
]
isort.required-imports = ["from __future__ import annotations"]
# Uncomment if using a _compat.typing backport
# typing-modules = ["usv_playpen._compat.typing"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20"]
"noxfile.py" = ["T20"]

[tool.pylint]
py-version = "3.11"
ignore-paths = [".*/_version.py"]
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
messages_control.disable = [
  "design",
  "fixme",
  "line-too-long",
  "missing-module-docstring",
  "missing-function-docstring",
  "wrong-import-position",
]

[tool.uv]
# Transitive-dependency security floors live here. When a Dependabot alert
# fires on a transitive package, pin it as `"<pkg>>=<patched>"` to force uv's
# sticky lock to bump it. Prune a pin once the ecosystem catches up and the
# package resolves to a patched version on its own (verify with
# `uv lock --upgrade`): a redundant floor is just clutter.
#
# Last pruned 2026-06-13 -- the mistune (#32), idna (#41), pymdown-extensions
# (#40), starlette (#42) and tornado (#43) floors were all redundant (their
# requiring deps now mandate patched versions) and removed; the lockfile still
# resolves each to a patched release.
#
# Re-added 2026-06-18 -- starlette (#44): marimo still allows 1.2.1, which is
# vulnerable to request.url authority poisoning via an unvalidated request
# path; patched in 1.3.0. Prune once marimo's floor mandates >=1.3.0.
#
# Added 2026-06-18 -- cryptography (#45): paramiko 4.0.0 pulls 46.0.7, whose
# bundled OpenSSL has the 2026-06-09 advisory; patched in 48.0.1. Prune once
# paramiko's floor mandates >=48.0.1.
#
# Added 2026-06-18 -- bleach (#46, #47): nbsphinx/jupyterlab pull 6.2.0, which
# fails to sanitize disallowed URI schemes (Unicode-obfuscated and formaction);
# patched in 6.4.0. Prune once the requiring deps mandate >=6.4.0.
# ultralytics pulls in base `opencv-python`, but `aniposelib` (camera
# calibration) calls the function-style cv2.aruco API (detectMarkers /
# interpolateCornersCharuco / estimatePoseCharucoBoard / refineDetectedMarkers)
# that ONLY `opencv-contrib-python` ships -- base opencv-python lacks those
# symbols at EVERY version, while opencv-contrib-python keeps them (verified:
# contrib 4.11 AND 4.13 have them; base opencv-python 4.11/4.13 do not). The two
# packages clobber the same cv2/ files, so whichever installs last wins. This is
# a package problem, not a version problem -- a version cap does not help;
# opencv-python must be excluded entirely so opencv-contrib-python (unpinned,
# any version) is the sole cv2 provider. The impossible marker
# (`python_version < '0'` is always false) drops every transitive request for
# opencv-python; ultralytics then imports cv2 from opencv-contrib-python (a
# superset) -- verified by running a real YOLO inference with contrib only.
# Caveat: ultralytics' ONNX backend calls check_requirements("opencv-python"),
# which would pip-install it at runtime; that path is unused by our PyTorch
# YOLO box-prompt mask inference. Revisit if we ever export/run ONNX models.
override-dependencies = [
    "opencv-python; python_version < '0'",
]
constraint-dependencies = [
    "starlette>=1.3.0",
    "cryptography>=48.0.1",
    "bleach>=6.4.0",
]

[tool.uv.sources]
sleap-anipose = { git = "https://github.com/davidt0x/sleap-anipose.git", branch = "main" }
sam-2 = { git = "https://github.com/facebookresearch/sam2.git" }
